# ome-ngff-types

./: .gitignore  README.md  pyproject.toml  tasks.py
ome_ngff_types/v0_4/: __init__.py  axes.py  base.py  datasets.py  image_label.py  metadata.py  multiscales.py  omero.py  plate.py  transformations.py  types.py  units.py  validators.py  warnings.py  well.py
tests/: test_samples.py
tests/samples/: idr0044A_4007801.json  idr0047A_4496763.json  idr0047A_4496763_labels_0.json  idr0048A_9846152.json  idr0052A_5514375.json  idr0052A_5514375_labels.json  idr0052A_5514375_labels_Cell.json  idr0052A_5514375_labels_Chromosomes.json  idr0054A_5025551.json  idr0054A_5025552.json  idr0054A_5025553.json  idr0062A_6001240.json  idr0062A_6001240_labels_0.json  idr0062A_6001247.json  idr0062A_6001247_labels_0.json  idr0073A_9798462.json  idr0076A_10501752.json  idr0076A_10501752_labels_0.json  idr0083A_9822152.json  idr0101A_13457227.json  idr0101A_13457537.json  idr0101A_13457537_labels_0.json  idr0101A_13457539.json  idr0101A_13457539_labels.json  idr0101A_13457539_labels_0.json  sample_labels.json  sample_omero.json
